--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 /.DS_Store
 /.pytest_cache
 /userdata
+__pycache__/JayTAKLib.cpython-312.pyc
+__pycache__/JayTAKObjectLib.cpython-312.pyc
+weatherAppActions.log
